Fix mobile viewport and add desktop warning

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div id="mobile-warning" class="mobile-warning">This site is best viewed on desktop.</div>
     <div id="game-container"></div>
     
     <!-- Overlay Modal -->
